--- a/src/home-five.html
+++ b/src/home-five.html
@@ -25,6 +25,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     
     <!-- main wrapper -->
     <div id="page">
