--- a/src/home-one.html
+++ b/src/home-one.html
@@ -22,6 +22,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     
     <!-- main wrapper -->
     <div id="page" class="font-dm">
@@ -37,7 +44,7 @@
             </div>
         </div>
         <!-- header wrap -->
-        <header class="header-wrapper w-100 z-10 py-lg-0 py-1 position-absolute border-bottom border-gray-200">
+        <header class="header-wrapper w-100 py-lg-0 py-1 top-0 start-0 position-fixed border-bottom border-gray-200">
             <nav class="navbar navbar-one navbar-expand-lg navbar-light border-0 py-0">
                 <div class="container">
                     <div class="position-relative d-flex align-items-center justify-content-between w-100">
