--- a/src/home-three.html
+++ b/src/home-three.html
@@ -23,6 +23,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     
     <!-- main wrapper -->
     <div id="page" class="bg-light">
