--- a/src/home-two.html
+++ b/src/home-two.html
@@ -20,6 +20,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     <!-- arrow top circle -->
     <div class="arrow-round">
         <div class="arrow-round-wrap orange">
@@ -32,12 +39,13 @@
         </div>
     </div>
     <!-- header wrap -->
-    <header class="header-wrapper w-100 z-10 py-lg-0 py-1 position-absolute">
+    <header class="header-wrapper w-100 py-lg-0 py-1 position-fixed start-0 top-0">
         <nav class="navbar navbar-one navbar-expand-lg navbar-light border-0 py-0">
             <div class="container">
                 <div class="position-relative d-flex align-items-center justify-content-between w-100">
                     <a class="navbar-brand light-logo logo position-relative" href="index.html">
-                        <img src="images/logo/logo-warning.png" alt="logo" class="logo-light" width="156" height="50">
+                        <img src="images/logo/logo-warning.png" alt="logo" class="logo-light nav-logo-light" width="156" height="50">
+                        <img src="images/logo/logo-warning-black.png" alt="logo" class="logo-dark nav-logo-dark" width="156" height="50">
                     </a>
                     <div class="menu-overlay"></div>
                     <div class="menu-block p-lg-0 p-3">                            
@@ -49,9 +57,9 @@
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                             </div>
                         </div>
-                        <ul class="navbar-nav font-dm gap-3 text-white fw-600" id="navbar-main">
+                        <ul class="navbar-nav font-dm gap-3 fw-600" id="navbar-main">
                             <li class="nav-item nav-item-has-children">
-                                <a class="nav-link text-white fw-500" href="#">Demo <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
+                                <a class="nav-link fw-500" href="#">Demo <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
                                 <ul class="sub-menu" id="submenu-1">
                                     <li class="sub-menu--item"><a href="home-one.html"><span class="menu-item-text">Tech Agency</span></a></li>
                                     <li class="sub-menu--item"><a href="home-two.html"><span class="menu-item-text">Startup Home</span></a></li>
@@ -61,7 +69,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item nav-item-has-children nav-item-has-mega-menu">
-                                <a class="nav-link text-white fw-500" href="#">Pages <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
+                                <a class="nav-link fw-500" href="#">Pages <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
                                 <div class="mega-menu">
                                     <div class="mega-menu-column">
                                         <div>
@@ -128,13 +136,13 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white fw-500" href="service.html">Service</a>
+                                <a class="nav-link fw-500" href="service.html">Service</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white fw-500" href="about.html">About</a>
+                                <a class="nav-link fw-500" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white fw-500" href="contact.html">Contact</a>
+                                <a class="nav-link fw-500" href="contact.html">Contact</a>
                             </li>
                         </ul>
                         <div class="menu-bottom">
@@ -143,16 +151,16 @@
                     </div>
                     
                     <div class="d-flex items-center gap-3">
-                        <button aria-label="search" class="btn btn-outline text-white p-0">
-                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                        <button aria-label="search" class="btn btn-outline  p-0">
+                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                         </button>
-                        <button aria-label="cart" class="btn btn-outline text-white p-0 position-relative">
-                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
-                            <span class="cart-badge bg-warning text-white">2</span>
+                        <button aria-label="cart" class="btn btn-outline  p-0 position-relative">
+                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
+                            <span class="cart-badge bg-warning">2</span>
                         </button>
                         <a href="#" class="btn bg-warning text-gray-800 fw-500 btn-md rounded-2 px-4 ms-2 d-none d-md-flex">Register</a>
-                        <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0 text-white d-flex d-lg-none">
-                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+                        <button aria-label="menu" class="mobile-menu-trigger btn btn-outline px-0  d-flex d-lg-none">
+                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                         </button>
                     </div>
                 </div>
